# c_game_project

./: CMakeLists.txt  Doxyfile
include/: display_tetris.h
src/: display_menu.c  display_tetris.c  main.c  update.c
